fixed some spacing for smaller screen size phones

--- a/css/about-card.css
+++ b/css/about-card.css
@@ -24,6 +24,6 @@
   }
 
   .about-card p {
-    font-size: 1em;
+    font-size: .875em;
   }
 }
